--- a/3a. lab-corner-detection-solution/Lab. Corner detection and ORB - solution.ipynb
+++ b/3a. lab-corner-detection-solution/Lab. Corner detection and ORB - solution.ipynb
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -559,7 +559,19 @@
     "id": "Gpz290LqGcDk",
     "outputId": "e79e6868-1497-4b28-ee83-41d5636ddde0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'io' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# solution\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m starbucks_model \u001b[38;5;241m=\u001b[39m io\u001b[38;5;241m.\u001b[39mimread(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(img_fld_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstarbucks/starbucks.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      4\u001b[0m starbucks \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      5\u001b[0m starbucks\u001b[38;5;241m.\u001b[39mappend(io\u001b[38;5;241m.\u001b[39mimread(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(img_fld_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstarbucks/starbucks2.png\u001b[39m\u001b[38;5;124m'\u001b[39m)))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'io' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# solution\n",
     "\n",
